syntax = "proto3";

package gRPCHellow; 

option go_package = "gRPCHellow/proto";

message GreetingsRequest {
    string fname = 1; 
}

message GreetingsResponse {
    string answer = 1; 
}

service GreetingsService {
    rpc Greetings(GreetingsRequest) returns (GreetingsResponse);
    rpc GreetingsManyTimees(GreetingsRequest) returns ( stream GreetingsResponse);
    rpc LongBackGretings(stream GreetingsRequest) returns (GreetingsResponse);
    rpc GreetingEveryone(stream GreetingsRequest) returns (stream GreetingsResponse);
}; 